<resources>
    <string name="app_name">HiredApp</string>
    <string name="app_image_description" />
    <string name="welcome_to_hired" />
    <string name="manage_your_job_search_efficiently_with_hired_app" />
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in1">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="username">Username</string>
    <string name="sign_in_fix">Sign In</string>
    <string name="submit">Submit</string>
    <string name="loading_please_wait">Loading, please wait…</string>
    <string name="welcome">Welcome</string>
    <string name="app_logo">app logo</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="img_for_add_new_note">img for add new note</string>
    <string name="image_for_showing_notes">image for showing notes</string>
    <string name="image_for_tips_and_tricks">image for tips and tricks</string>
    <string name="image_for_calander">image for calander</string>
    <string name="enter_your_note_here">Enter your note here</string>
    <string name="save_note">Save Note</string>
    <string name="back_to_main">Back to Main</string>
    <string name="select_date">Select Date</string>
    <dimen name="margin_top_300dp">300dp</dimen>
    <string name="view_notes_page">View Notes Page</string>
    <string name="displaying_notes_for">Displaying notes for:</string>
    <string name="this_is_the_calendar_page_here_you_can_see_notes_on_certain_dates">This is the calendar page. Here you can see notes on certain dates.</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_sms">Send SMS</string>
    <string name="company_name">Company Name</string>
    <string name="track_your_job_applications_easily_by_adding_each_application_sent">Track your job applications easily by adding each application sent!</string>
    <string name="save" >save</string>
    <string name="send_sms_notification">send sms notification</string>
    <string name="page_for_tips">Page for Tips</string>
    <string name="click_below_to_change_type_of_video">Click below to change type of video</string>
    <string name="here_you_can_find_different_types_of_tips_to_get_you_hired_faster_and_smarter">Here you can find different types of tips to get you hired faster and smarter.</string>
    <string name="todo">TODO</string>
    <string name="calendarDescriptionText">This is a page that will help you manage your interview better!\nClick on a date you scheduled a meeting, enter the name of the company and your phone,\n and an SMS with the meeting details will be sent to you!</string>

</resources>
