<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:autofillHints="" />

    <Button
        android:id="@+id/sendSmsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"/>
</LinearLayout>